# 3D-Render-App

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/asoss/a3drender/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: grabcutter_p.cpp  grabcutter_p.h  jni-grabcut-lib.cpp  native-lib.cpp
app/src/main/res/drawable/: bg_circle.xml  border.xml  border2.xml  btn_rounded_green.xml  btn_rounded_primary.xml  btn_rounded_red.xml  custom_progress_bar_horizontal.xml  ic_camera_enhance_black_24dp.xml  ic_circle.xml  ic_close_black_24dp.xml  ic_exit_to_app_black_24dp.xml  ic_option_content_4.xml  ic_option_model_1.xml  ic_option_repo_2.xml  ic_option_settings.xml  ic_option_storage_3.xml  ic_photo_library_black_24dp.xml  ic_tab_one.xml  ic_tab_three.xml  ic_tab_two.xml  ic_vector_3dmodel.xml  ic_vector_features.xml  ic_vector_stlfiles.xml  ic_vector_transform.xml  white_rectangle_container.xml
app/src/main/res/layout/: activity_crop.xml  activity_display_cropimg.xml  activity_initialize.xml  activity_model_view.xml  activity_no_item_internet_image.xml  activity_render.xml  activity_splash.xml  activity_stllist_rowitem.xml  bottom_sheet_image_options.xml  bottom_sheet_options.xml  fragment_bottom_sheet_dialog.xml  item_stepper_wizard_color.xml  popup_common_dialog.xml
app/src/main/res/menu/: bottom_menu.xml  model.xml
app/src/main/res/values/: colors.xml  dimens.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/values-de/: strings.xml
(+37 files in other folders)
